--- a/app/src/main/res/layout/fragment_select_player.xml
+++ b/app/src/main/res/layout/fragment_select_player.xml
@@ -18,7 +18,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/tap_to_edit"
+            android:hint="@string/tap_to_edit"
             android:inputType="text"
             app:layout_constraintEnd_toStartOf="@+id/searchButton"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,6 @@
 
         <Button
             android:id="@+id/searchButton"
-            android:onClick="searchPlayersWithSearchString"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
