--- a/app/src/main/res/layout/activity_start_new_game.xml
+++ b/app/src/main/res/layout/activity_start_new_game.xml
@@ -92,23 +92,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_margin="8dp"
             >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/max_number_of_frames"
+                android:layout_gravity="center"
                 android:padding="8dp"
+                android:text="@string/max_number_of_frames"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
 
             <NumberPicker
+                android:id="@+id/maxFrameNumberPicker"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:theme="@style/AppTheme"
-                android:id="@+id/maxFrameNumberPicker"
-                />
+                android:orientation="horizontal"
+                android:padding="8dp"
+                android:theme="@style/AppTheme" />
 
         </LinearLayout>
     </LinearLayout>
