Added ball icons.

--- a/app/src/main/res/layout/activity_create_new_player.xml
+++ b/app/src/main/res/layout/activity_create_new_player.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#00FFFFFF"
     tools:context=".CreateNewPlayerActivity">
 
     <TextView
@@ -28,7 +29,7 @@
         android:inputType="none|textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/verifyPasswordEditText"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
         android:id="@+id/lastnameEditText"
@@ -98,11 +99,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:onClick="createPlayerTapped"
         android:text="@string/create_player"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/infoTextView"
-        android:onClick="createPlayerTapped"/>
+        app:layout_constraintTop_toBottomOf="@+id/infoTextView" />
 
     <EditText
         android:id="@+id/passwordEditText"
@@ -152,4 +153,19 @@
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/verifyPasswordEditText"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="TODO"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/redball" />
 </androidx.constraintlayout.widget.ConstraintLayout>
