--- a/app/src/main/res/layout/activity_start_new_match.xml
+++ b/app/src/main/res/layout/activity_start_new_match.xml
@@ -126,6 +126,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:text="@string/title_activity_start_new_match"
+                android:onClick="startMatch"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/maxFrameNumberPicker" />
